--- a/docs/PS3/BLES00669.md
+++ b/docs/PS3/BLES00669.md
@@ -10,7 +10,31 @@ Target File: `OPTIONS`
 00000498 00000001
 ```
 
-### 2. Update Custom CRC32 OPTIONS (Required)
+### 2. Enable Uplay Altairs outfit
+
+Target File: `OPTIONS`
+
+```
+00000486 00000001
+```
+
+### 3. Enable Uplay knives upgrade
+
+Target File: `OPTIONS`
+
+```
+00000474 00000001
+```
+
+### 4. Enable Verizon App Store Bonus skin
+
+Target File: `OPTIONS`
+
+```
+0000041A 00000001
+```
+
+### 5. Update Custom CRC32 OPTIONS (Required)
 
 Target File: `OPTIONS`
 
@@ -27,7 +51,7 @@ set [hash]:crc
 write at 0x0004:[hash]
 ```
 
-### 3. Update Custom CRC32 AC2_0.SAV (Required)
+### 6. Update Custom CRC32 AC2_0.SAV (Required)
 
 Target File: `AC2_0.SAV`
 
