--- a/docs/PS3/BLUS31193.md
+++ b/docs/PS3/BLUS31193.md
@@ -1,20 +1,9 @@
-#  Assassin's Creed III 
+#  Assassin's Creed IV Black Flag 
 
-`BLES01667.savepatch`
+`BLUS31193.savepatch`
 
 ### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
-### 2. Max Money
-
-Target File: `BLES01667AC3AC3_*\AC3_*`
-
-```
-80010004 A657F804
-280000A7 FFE0F505
-80010004 7FC985D9
-280000A7 FFE0F505
-```
-
-### 3. Update Custom CRC32 OPTIONS (Required)
+### 2. Update Custom CRC32 OPTIONS (Required)
 
 Target File: `OPTIONS`
 
