--- a/docs/PS3/BLUS30991.md
+++ b/docs/PS3/BLUS30991.md
@@ -14,3 +14,20 @@ Target File: `BLUS30991AC3AC3_*\AC3_*`
 280000A7 FFE0F505
 ```
 
+### 3. Update Custom CRC32 OPTIONS (Required)
+
+Target File: `OPTIONS`
+
+```
+set crc_bandwidth:32
+set crc_polynomial:0x4C11DB7
+set crc_initial_value:0xbae23cd0
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [size]:read(0x00,4)
+set range:0x0008,[size]+7
+set [hash]:crc
+write at 0x0004:[hash]
+```
+
