--- a/docs/PS3/BLUS31465.md
+++ b/docs/PS3/BLUS31465.md
@@ -1,17 +1,23 @@
-#  Assassin's Creed III 
+#  Assassin's Creed Rogue 
 
-`BLES01667.savepatch`
+`BLUS31465.savepatch`
 
 ### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
-### 2. Max Money
+### 2. Update Custom CRC32 ACRO_0.SAV (Required)
 
-Target File: `BLES01667AC3AC3_*\AC3_*`
+Target File: `ACRO_0.SAV`
 
 ```
-80010004 A657F804
-280000A7 FFE0F505
-80010004 7FC985D9
-280000A7 FFE0F505
+set crc_bandwidth:32
+set crc_polynomial:0x4C11DB7
+set crc_initial_value:0xbae23cd0
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [size]:read(0x00,4)
+set range:0x0008,[size]+7
+set [hash]:crc
+write at 0x0004:[hash]
 ```
 
 ### 3. Update Custom CRC32 OPTIONS (Required)
