--- a/docs/PS3/BLUS30808.md
+++ b/docs/PS3/BLUS30808.md
@@ -12,7 +12,24 @@ Target File: `BLUS30808AC2AC2_*\AC2_*.SAV`
 28000097 FFE0F505
 ```
 
-### 3. Update Custom CRC32 OPTIONS (Required)
+### 3. Update Custom CRC32 AC2_0.SAV (Required)
+
+Target File: `BLUS30808AC2AC2_*\AC2_*.SAV`
+
+```
+set crc_bandwidth:32
+set crc_polynomial:0x4C11DB7
+set crc_initial_value:0xbae23cd0
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [size]:read(0x00,4)
+set range:0x0008,[size]+7
+set [hash]:crc
+write at 0x0004:[hash]
+```
+
+### 4. Update Custom CRC32 OPTIONS (Required)
 
 Target File: `OPTIONS`
 
