--- a/docs/PS3/BLUS31193.md
+++ b/docs/PS3/BLUS31193.md
@@ -3,7 +3,24 @@
 `BLUS31193.savepatch`
 
 ### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
-### 2. Update Custom CRC32 OPTIONS (Required)
+### 2. Update Custom CRC32 AC4_0.SAV (Required)
+
+Target File: `AC4_0.SAV`
+
+```
+set crc_bandwidth:32
+set crc_polynomial:0x4C11DB7
+set crc_initial_value:0xbae23cd0
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [size]:read(0x00,4)
+set range:0x0008,[size]+7
+set [hash]:crc
+write at 0x0004:[hash]
+```
+
+### 3. Update Custom CRC32 OPTIONS (Required)
 
 Target File: `OPTIONS`
 
