--- a/docs/PS3/BLUS30537.md
+++ b/docs/PS3/BLUS30537.md
@@ -19,7 +19,17 @@ Target File: `BLUS30537AC2AC2_*\AC2_*.SAV`
 Target File: `BLUS30537AC2AC2_*\AC2_*.SAV`
 
 ```
-set crc_bandwidth:32```
+set crc_bandwidth:32
+set crc_polynomial:0x4C11DB7
+set crc_initial_value:0xbae23cd0
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [size]:read(0x00,4)
+set range:0x0008,[size]+7
+set [hash]:crc
+write at 0x0004:[hash]
+```
 
 ### 4. Update Custom CRC32 OPTIONS (Required)
 
@@ -36,6 +46,5 @@ set [size]:read(0x00,4)
 set range:0x0008,[size]+7
 set [hash]:crc
 write at 0x0004:[hash]
-set crc_bandwidth:32
 ```
 
