--- a/docs/PS3/BLES00669.md
+++ b/docs/PS3/BLES00669.md
@@ -34,7 +34,55 @@ Target File: `OPTIONS`
 0000041A 00000001
 ```
 
-### 5. Update Custom CRC32 OPTIONS (Required)
+### 5. Enable Maria Thorpe LongSword
+
+Target File: `OPTIONS`
+
+```
+0000056B 00000001
+```
+
+### 6. Enable Fredricks Hammer
+
+Target File: `OPTIONS`
+
+```
+0000056C 00000001
+```
+
+### 7. Enable Mace of the Bull
+
+Target File: `OPTIONS`
+
+```
+0000056D 00000001
+```
+
+### 8. Enable Dark Oracle Bone Dagger
+
+Target File: `OPTIONS`
+
+```
+0000056E 00000001
+```
+
+### 9. Enable Twins Rapier
+
+Target File: `OPTIONS`
+
+```
+0000056F 00000001
+```
+
+### 10. Enable Boucharts blade
+
+Target File: `OPTIONS`
+
+```
+00000570 00000001
+```
+
+### 11. Update Custom CRC32 OPTIONS (Required)
 
 Target File: `OPTIONS`
 
@@ -51,7 +99,7 @@ set [hash]:crc
 write at 0x0004:[hash]
 ```
 
-### 6. Update Custom CRC32 AC2_0.SAV (Required)
+### 12. Update Custom CRC32 AC2_0.SAV (Required)
 
 Target File: `AC2_0.SAV`
 
