--- a/docs/PS4/CUSA01154.md
+++ b/docs/PS4/CUSA01154.md
@@ -8,7 +8,7 @@ Target File: `TPP_GAME_DATA*`
 
 ```
 set range:0x0000,EOF+1
-DECRYPT MGS5_TPP(0x4131F8BE)
+DECRYPT MGS5_TPP(0x4F36C055)
 ```
 
 ### 2. Max Heroism
@@ -172,6 +172,6 @@ Target File: `TPP_GAME_DATA*`
 
 ```
 set range:0x0000,EOF+1
-ENCRYPT MGS5_TPP(0x4131F8BE)
+ENCRYPT MGS5_TPP(0x4F36C055)
 ```
 
