--- a/docs/PS4/CUSA03199.md
+++ b/docs/PS4/CUSA03199.md
@@ -11,6 +11,6 @@ set range:0x0004,EOF+1
 set [csum]:jhash
 set [csum]:[csum]+0x4900DC7C
 set [csum]:endian_swap
-msgbox [csum]
+write at 0x0000:[csum]
 ```
 
