--- a/docs/PS3/NPUB31126.md
+++ b/docs/PS3/NPUB31126.md
@@ -65,7 +65,7 @@ Target File: `SAVE.DAT`
 ```
 set pointer:eof+1
 set range:0x10,pointer
-set [hash]:ducktales_checksum
+set [hash]:lookup3_little2(0x04D2, 0x162E)
 write at 0x0000:[hash]
 ```
 
