--- a/docs/PS4/CUSA04671.md
+++ b/docs/PS4/CUSA04671.md
@@ -5,7 +5,7 @@
 ### 1. Untested - Make sure to backup your save data first
 ### 2. Unlock All Modes & Unlock All Unlockables
 
-Target File: `*`
+Target File: `deadrising`
 
 ```
 A00000A0 00000020
@@ -13,5 +13,15 @@ FF7D7DF3 FDF90300
 FF7D7DF3 FDF90300
 CA092600 00000000
 604F8200 78022600
+```
+
+### 3. Update Custom Checksum (Required)
+
+Target File: `deadrising`
+
+```
+set pointer:eof+1
+set range:0x0000,pointer
+set [csum]:deadrising_checksum
 ```
 
