update codes + keys
psp/ps3 keys

--- a/docs/PS4/CUSA00900.md
+++ b/docs/PS4/CUSA00900.md
@@ -1006,14 +1006,18 @@ Target File: `userdata00*`
 08000000 00000042
 ```
 
-### 85. Isz Glitch Cure (Character must be affected by Isz Glitch)
+### 85. Isz Glitch Cure (Fixes Isz Glitch, character may or may not be affected by Isz Glitch)
 
 Target File: `userdata00*`
 
 ```
-80010004 07001300
-92000000 00000DB3
+80010008 03000000
+05000100 00000000
+92000000 00000DD1
+D8000000 020130FF
+D8000000 0103C0FF
+08000001 00000030
 D8000000 0100C0FF
-18000000 0000FFFF
+08000001 000000FF
 ```
 
