--- a/docs/PSP/UCUS98751.md
+++ b/docs/PSP/UCUS98751.md
@@ -8,7 +8,7 @@ Target File: `SECURE.BIN`
 
 ```
 set range:0x0000,EOF+1
-DECRYPT patapon3
+DECRYPT camellia_ecb("SVsyE56pniSRS9dIPTiE8ApDaUnN0AEa")
 ```
 
 ### 2. Encrypt SECURE.BIN (required)
@@ -17,6 +17,6 @@ Target File: `SECURE.BIN`
 
 ```
 set range:0x0000,EOF+1
-ENCRYPT patapon3
+ENCRYPT camellia_ecb("SVsyE56pniSRS9dIPTiE8ApDaUnN0AEa")
 ```
 
