--- a/docs/PS4/CUSA02320.md
+++ b/docs/PS4/CUSA02320.md
@@ -1,6 +1,6 @@
-#  Uncharted 3: Drake's Deception Remastered 
+#  Uncharted: Drake's Fortune Remastered 
 
-`CUSA03282.savepatch`
+`CUSA02320.savepatch`
 
 ### 1. Decrypt USR-DATA (Required)
 
