--- a/docs/PS4/CUSA07875.md
+++ b/docs/PS4/CUSA07875.md
@@ -1,6 +1,6 @@
-#  Uncharted 3: Drake's Deception Remastered 
+# Uncharted: The Lost Legacy
 
-`CUSA03282.savepatch`
+`CUSA07875.savepatch`
 
 ### 1. Decrypt USR-DATA (Required)
 
@@ -9,10 +9,8 @@ Target File: `USR-DATA`
 ```
 set [end]:read(EOF-3, 4)
 set [end]:endian_swap
-set range:0x00000C,[end]+0x0B
-endian_swap(4)
+set range:0x000008,[end]+7
 DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
-endian_swap(4)
 ```
 
 ### 2. Update CRC32 checksum for USR-DATA (Required)
@@ -20,13 +18,13 @@ endian_swap(4)
 Target File: `USR-DATA`
 
 ```
-set [block_length]:read(0x590,4)
+set [block_length]:read(0x58C,4)
 set [block_length]:endian_swap
-set [block_length]:[block_length]+0x58B
-set range:0x590,[block_length]
+set [block_length]:[block_length]+0x587
+set range:0x58C,[block_length]
 set [hash]:crc32
 set [hash]:endian_swap
-write at 0x58C:[hash]
+write at 0x588:[hash]
 ```
 
 ### 3. Update HMAC SHA1 checksum for USR-DATA (Required)
@@ -34,8 +32,8 @@ write at 0x58C:[hash]
 Target File: `USR-DATA`
 
 ```
-set pointer:EOF-0x23
-set range:0x00000C,pointer
+set pointer:EOF-0x1F
+set range:0x000008,pointer
 set [hash]:hmac_sha1("xM;6X%/p^L/:}-5QoA+K8:F*M!~sb(WK<E%6sW_un0a[7Gm6,()kHoXY+yI/s;Ba")
 write next (0):[hash]
 ```
@@ -47,9 +45,7 @@ Target File: `USR-DATA`
 ```
 set [end]:read(EOF-3, 4)
 set [end]:endian_swap
-set range:0x00000C,[end]+0x0B
-endian_swap(4)
+set range:0x000008,[end]+7
 ENCRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
-endian_swap(4)
 ```
 
