--- a/docs/PS4/CUSA03281.md
+++ b/docs/PS4/CUSA03281.md
@@ -9,8 +9,10 @@ Target File: `USR-DATA`
 ```
 set [end]:read(EOF-3, 4)
 set [end]:endian_swap
-set range:0x000008,[end]+7
+set range:0x00000C,[end]+0x0B
+endian_swap(4)
 DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
+endian_swap(4)
 ```
 
 ### 2. Update CRC32 checksum for USR-DATA (Required)
@@ -18,13 +20,13 @@ DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
 Target File: `USR-DATA`
 
 ```
-set [block_length]:read(0x58C,4)
+set [block_length]:read(0x590,4)
 set [block_length]:endian_swap
-set [block_length]:[block_length]+0x587
-set range:0x58C,[block_length]
+set [block_length]:[block_length]+0x58B
+set range:0x590,[block_length]
 set [hash]:crc32
 set [hash]:endian_swap
-write at 0x588:[hash]
+write at 0x58C:[hash]
 ```
 
 ### 3. Update HMAC SHA1 checksum for USR-DATA (Required)
@@ -33,7 +35,7 @@ Target File: `USR-DATA`
 
 ```
 set pointer:EOF-0x23
-set range:0x000008,pointer
+set range:0x00000C,pointer
 set [hash]:hmac_sha1("xM;6X%/p^L/:}-5QoA+K8:F*M!~sb(WK<E%6sW_un0a[7Gm6,()kHoXY+yI/s;Ba")
 write next (0):[hash]
 ```
@@ -45,7 +47,9 @@ Target File: `USR-DATA`
 ```
 set [end]:read(EOF-3, 4)
 set [end]:endian_swap
-set range:0x000008,[end]+7
+set range:0x00000C,[end]+0x0B
+endian_swap(4)
 ENCRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
+endian_swap(4)
 ```
 
