ps4 tlou 2 codes

--- a/docs/PS4/CUSA07820.md
+++ b/docs/PS4/CUSA07820.md
@@ -1,11 +1,21 @@
-# PS4 The Last of Us 2
+# PS4 The Last of Us Part II
 
 `CUSA07820.savepatch`
 
-### 1. Untested - Make sure to backup your save data first
+### 1. Decrypt USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [end]:read(0x08, 4)
+set [end]:endian_swap
+set range:0x000010,[end]+0x0F
+DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
+```
+
 ### 2. Update 1.05/Max Points
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 20001150 00000000
@@ -14,7 +24,7 @@ Target File: `*`
 
 ### 3. All Concept Art Purchased
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 20001370 0000003F
@@ -23,7 +33,7 @@ Target File: `*`
 
 ### 4. All Models Purchased
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 200012E0 6FB79B3F
@@ -33,7 +43,7 @@ Target File: `*`
 
 ### 5. Infinite Silencer (Ellie + Abby) *Silencer Must Be Equipped Before Adding Cheat & ‘Load Game’ Must Be Selected
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010010 5A896447
@@ -48,7 +58,7 @@ Target File: `*`
 
 ### 6. All Character Upgrades (Gives Ellie 6 HP Bars)
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 A00071D0 00000008
@@ -59,7 +69,7 @@ FFFFFFFF FFFFFFFF
 
 ### 7. Max Melee Durability (ANY Weapon) *Must Have Weapon On Inventory
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010010 F52C8095
@@ -100,9 +110,9 @@ C793FDAD 00000000
 28000070 00000001
 ```
 
-### 8. Weapon swap bow to tommy's rifle for Ellie - by @officialahmed0
+### 8. Weapon swap bow to tommy's rifle for Ellie
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010020 861B638E
@@ -146,9 +156,9 @@ A8000000 00000008
 BA732505 B3E6FB0F
 ```
 
-### 9. Weapon swap bow to tommy's rifle for Abby - by @officialahmed0
+### 9. Weapon swap bow to tommy's rifle for Abby
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80040020 861B638E
@@ -194,7 +204,7 @@ BA732505 B3E6FB0F
 
 ### 10. ELLIE WEAPON SWAP CODE: BOLT ACTON RIFLE – SILENCER ONLY
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010020 861B638E
@@ -236,5 +246,47 @@ DA8B94C4 1D76CA5D
 C84B89E2 00000000
 A8000000 00000008
 DA8B94C4 1D76CA5D
+```
+
+### 11. Update CRC32-C checksum for USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [block_length]:read(0x594,4)
+set [block_length]:endian_swap
+set [block_length]:[block_length]+0x58F
+set range:0x594,[block_length]
+set crc_bandwidth:32
+set crc_polynomial:0x1EDC6F41
+set crc_initial_value:0xFFFFFFFF
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [hash]:crc
+set [hash]:endian_swap
+write at 0x590:[hash]
+```
+
+### 12. Update HMAC SHA1 checksum for USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set pointer:EOF-0x1F
+set range:0x000010,pointer
+set [hash]:hmac_sha1("xM;6X%/p^L/:}-5QoA+K8:F*M!~sb(WK<E%6sW_un0a[7Gm6,()kHoXY+yI/s;Ba")
+write next (0):[hash]
+```
+
+### 13. Encrypt USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [end]:read(0x08, 4)
+set [end]:endian_swap
+set range:0x000010,[end]+0x0F
+ENCRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
 ```
 
