--- a/docs/PS4/CUSA17962.md
+++ b/docs/PS4/CUSA17962.md
@@ -2,10 +2,20 @@
 
 `CUSA17962.savepatch`
 
-### 1. Untested - Make sure to backup your save data first
+### 1. Decrypt USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [end]:read(0x08, 4)
+set [end]:endian_swap
+set range:0x000010,[end]+0x0F
+DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
+```
+
 ### 2. Inf Silencer (Must have one, Must Use Load Save)
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010010 5A896447
@@ -20,7 +30,7 @@ Target File: `*`
 
 ### 3. Add Inf Silencer (Use if u dont have one)-Ellie
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010020 861B638E
@@ -42,7 +52,7 @@ FF000000 00000000
 
 ### 4. Add Inf Silencer (Use if u dont have one)-Abby
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80040020 861B638E
@@ -64,7 +74,7 @@ FF000000 00000000
 
 ### 5. All Ellie Character Upgrades (Gives Ellie Extra HP 6 Boxs)
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010010 193DC7D0
@@ -77,7 +87,7 @@ FFFF0000 00000000
 
 ### 6. Max Points
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 20001150 00000000
@@ -86,7 +96,7 @@ Target File: `*`
 
 ### 7. All Concept Art Purchased
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 20001370 0000003F
@@ -95,7 +105,7 @@ Target File: `*`
 
 ### 8. All Models Purchased
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 200012E0 6FB79B3F
@@ -105,7 +115,7 @@ Target File: `*`
 
 ### 9. All Abby Character Upgrades
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80020010 193DC7D0
@@ -118,7 +128,7 @@ FFFF0000 00000000
 
 ### 10. All - Max Melee Durability
 
-Target File: `*`
+Target File: `USR-DATA`
 
 ```
 80010010 F52C8095	
@@ -157,5 +167,47 @@ C793FDAD 00000000
 28000060 7FFFFFFF	
 28000068 7FFFFFFF	
 28000070 00000001	
+```
+
+### 11. Update CRC32-C checksum for USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [block_length]:read(0x594,4)
+set [block_length]:endian_swap
+set [block_length]:[block_length]+0x58F
+set range:0x594,[block_length]
+set crc_bandwidth:32
+set crc_polynomial:0x1EDC6F41
+set crc_initial_value:0xFFFFFFFF
+set crc_output_xor:0xFFFFFFFF
+set crc_reflection_input:1
+set crc_reflection_output:1
+set [hash]:crc
+set [hash]:endian_swap
+write at 0x590:[hash]
+```
+
+### 12. Update HMAC SHA1 checksum for USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set pointer:EOF-0x1F
+set range:0x000010,pointer
+set [hash]:hmac_sha1("xM;6X%/p^L/:}-5QoA+K8:F*M!~sb(WK<E%6sW_un0a[7Gm6,()kHoXY+yI/s;Ba")
+write next (0):[hash]
+```
+
+### 13. Encrypt USR-DATA (Required)
+
+Target File: `USR-DATA`
+
+```
+set [end]:read(0x08, 4)
+set [end]:endian_swap
+set range:0x000010,[end]+0x0F
+ENCRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
 ```
 
