--- a/docs/PS4/CUSA01609.md
+++ b/docs/PS4/CUSA01609.md
@@ -2,7 +2,23 @@
 
 `CUSA01609.savepatch`
 
-### 1. Update JHash (Required)
+### 1. Decompress Save (Required)
+
+Target File: `*`
+
+```
+Decompress(*, -15)
+```
+
+### 2. Compress Save (Required)
+
+Target File: `*`
+
+```
+Compress(*)
+```
+
+### 3. Update JHash (Required)
 
 Target File: `*`
 
