--- a/docs/PSV/PCSE00608.md
+++ b/docs/PSV/PCSE00608.md
@@ -7,7 +7,7 @@
 Target File: `data/data0000.bin`
 
 ```
-Decompress data/data0000.bin
+Decompress(0x00000000, 15)
 ```
 
 ### 2. Update DWADD checksum (Required)
@@ -47,6 +47,6 @@ delete at 0x00:0x4000
 Target File: `data/data0000.bin`
 
 ```
-Compress data/data0000.bin,-w 15
+Compress(0x00000000)
 ```
 
