--- a/docs/PS4/CUSA42698.md
+++ b/docs/PS4/CUSA42698.md
@@ -1,20 +1,37 @@
-;CUSA42697
-;Shin Megami Tensei V: Vengeance
-; by bucanero
+# Shin Megami Tensei V: Vengeance
 
-:Megaten5.ps4.sav
+`CUSA42698.savepatch`
 
-[AES Decrypt savedata (Required)]
+### 1. AES Decrypt savedata (Required)
+
+Target File: `Megaten5.ps4.sav`
+
+```
 set range:0x0000,EOF+1
 DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
+```
 
-[Money $99999999]
+### 2. Money $99999999
+
+Target File: `Megaten5.ps4.sav`
+
+```
 20003D32 05F5E0FF
+```
 
-[Glory 999]
+### 3. Glory 999
+
+Target File: `Megaten5.ps4.sav`
+
+```
 10003D4A 000003E7
+```
 
-[Main Character Max Stats]
+### 4. Main Character Max Stats
+
+Target File: `Megaten5.ps4.sav`
+
+```
 1000098C 000003E7
 1000099C 000003E7
 100009AC 000003E7
@@ -30,8 +47,13 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 10000994 000003E7
 100009A4 000003E7
 100009B4 000003E7
+```
 
-[Main Character Max Skill Potential]
+### 5. Main Character Max Skill Potential
+
+Target File: `Megaten5.ps4.sav`
+
+```
 00000B38 00000009
 00000B3A 00000009
 00000B3C 00000009
@@ -43,13 +65,23 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 00000B48 00000009
 00000B4A 00000005
 00000B4C 00000005
+```
 
-[Main Character Max Exp]
+### 6. Main Character Max Exp
+
+Target File: `Megaten5.ps4.sav`
+
+```
 20000610 05F5E0FF
 200007E8 05F5E0FF
 200009C0 05F5E0FF
+```
 
-[Demon 1 Max Stats]
+### 7. Demon 1 Max Stats
+
+Target File: `Megaten5.ps4.sav`
+
+```
 10000B64 000003E7
 10000B74 000003E7
 10000B84 000003E7
@@ -65,11 +97,21 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 10000B6C 000003E7
 10000B7C 000003E7
 10000B8C 000003E7
+```
 
-[Demon 1 Max Exp]
+### 8. Demon 1 Max Exp
+
+Target File: `Megaten5.ps4.sav`
+
+```
 20000BC8 05F5E0FF
+```
 
-[Demon 2 Max Stats]
+### 9. Demon 2 Max Stats
+
+Target File: `Megaten5.ps4.sav`
+
+```
 10000D0C 000003E7
 10000D1C 000003E7
 10000D2C 000003E7
@@ -85,11 +127,21 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 10000D14 000003E7
 10000D24 000003E7
 10000D34 000003E7
+```
 
-[Demon 2 Max Exp]
+### 10. Demon 2 Max Exp
+
+Target File: `Megaten5.ps4.sav`
+
+```
 20000D70 05F5E0FF
+```
 
-[Demon 3 Max Stats]
+### 11. Demon 3 Max Stats
+
+Target File: `Megaten5.ps4.sav`
+
+```
 10000EB4 000003E7
 10000EC4 000003E7
 10000ED4 000003E7
@@ -106,11 +158,21 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 10000ECC 000003E7
 10000EDC 000003E7
 10000F2C 000003E7
+```
 
-[Demon 3 Max Exp]
+### 12. Demon 3 Max Exp
+
+Target File: `Megaten5.ps4.sav`
+
+```
 20000F18 05F5E0FF
+```
 
-[Demon 4 Max Stats]
+### 13. Demon 4 Max Stats
+
+Target File: `Megaten5.ps4.sav`
+
+```
 1000105C 000003E7
 1000106C 000003E7
 1000107C 000003E7
@@ -127,11 +189,21 @@ DECRYPT aes_ecb("0123456789abcdef0123456789abcdef")
 10001074 000003E7
 10001084 000003E7
 100010D4 000003E7
+```
 
-[Demon 4 Max Exp]
+### 14. Demon 4 Max Exp
+
+Target File: `Megaten5.ps4.sav`
+
+```
 200010C0 05F5E0FF
+```
 
-[All Usable Items]
+### 15. All Usable Items
+
+Target File: `Megaten5.ps4.sav`
+
+```
 A0004C73 0000006E
 63636363 63636363
 63636363 63636363
@@ -147,14 +219,25 @@ A0004C73 0000006E
 63636363 63636363
 63636363 63636363
 63636363 63630000
+```
 
-; checksum by Skiller
-[Update SHA1 for savedata (Required)]
+### 16. Update SHA1 for savedata (Required)
+
+Target File: `Megaten5.ps4.sav`
+
+```
 set pointer:EOF+1
 set range:0x000040,pointer
 set [hash]:SHA1
 write at 0x0000:[hash]
+```
 
-[AES Encrypt savedata (Required)]
+### 17. AES Encrypt savedata (Required)
+
+Target File: `Megaten5.ps4.sav`
+
+```
 set range:0x0000,EOF+1
 ENCRYPT aes_ecb("0123456789abcdef0123456789abcdef")
+```
+
