--- a/docs/PS3/BLES00556.md
+++ b/docs/PS3/BLES00556.md
@@ -12,7 +12,7 @@ Decompress(0x0000000a, -15)
 
 ### 2. Green:goldrush! and on the rigat track 1$ more(Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "AchGRush_G"
@@ -23,7 +23,7 @@ write next (23):0x0000030D3F
 
 ### 3. Green:Unforgiven one more (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "AchUnfor_G"
@@ -32,7 +32,7 @@ write next (25):0x0000000009
 
 ### 4. Green:Well Invested one more (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "AchWellInv_G"
@@ -41,7 +41,7 @@ write next (29):0x0000090013
 
 ### 5. Green:max cash thomas (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "Cash1"
@@ -50,7 +50,7 @@ write next (5):0x0000ffffff
 
 ### 6. Green:max cash ray  (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "Cash0"
@@ -59,7 +59,7 @@ write next (5):0x0000ffffff
 
 ### 7. Green:max cash multiplayer (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "Cash"
@@ -68,7 +68,7 @@ write next (4):0x0000ffffff
 
 ### 8. Green:god mode (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "CheatGodMode"
@@ -77,7 +77,7 @@ write next (12):0x0000000001
 
 ### 9. Green:magic ammo (Working)
 
-Target File: `*\~extracted\0000000a.dat`
+Target File: `~extracted\0000000a.dat`
 
 ```
 search "CheatMagicAmmo"
