--- a/docs/PS3/BLES00705.md
+++ b/docs/PS3/BLES00705.md
@@ -12,7 +12,7 @@ Decompress(0x00000035, 15)
 
 ### 2. Max Health
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "Health"
@@ -21,7 +21,7 @@ write next (7):FFC99A3B
 
 ### 3. Max Souls
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "Souls"
@@ -30,7 +30,7 @@ write next (6):286B6E4E
 
 ### 4. Max Wrath
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "Wrath"
@@ -39,7 +39,7 @@ write next (6):286B6E4E
 
 ### 5. Max Chaos
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "Chaos"
@@ -48,7 +48,7 @@ write next (6):286B6E4E
 
 ### 6. Max Sword Level
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "sword/warsword"
@@ -57,7 +57,7 @@ write next (35):05
 
 ### 7. 159 Kills On Angelic Beast
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfKillsOnBird"
@@ -66,7 +66,7 @@ write next (20):9F
 
 ### 8. 665 Demons Killed
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfDemonsKilled"
@@ -75,7 +75,7 @@ write next (21):9902
 
 ### 9. 149 Demons Killed On Horseback
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfDemonsKilledOnHorseback"
@@ -84,7 +84,7 @@ write next (32):95
 
 ### 10. 149 Demons Killed With Enviroment
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfEnemiesKilledWithEnvironment"
@@ -93,7 +93,7 @@ write next (37):95
 
 ### 11. 99 Miles Travelled
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "DistanceTraveledMounted"
@@ -102,7 +102,7 @@ write next (24):0000C642
 
 ### 12. 149 Chests Searched
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfChestsOpened"
@@ -111,7 +111,7 @@ write next (21):95
 
 ### 13. 26 Artifacts Collected
 
-Target File: `*\~extracted\00000035.dat`
+Target File: `~extracted\00000035.dat`
 
 ```
 search "NumberOfArtifactsCollected"
