--- a/docs/PS3/BLES01309.md
+++ b/docs/PS3/BLES01309.md
@@ -2,25 +2,41 @@
 
 `BLES01309.savepatch`
 
-### 1. Max Gold(Apply on xxxxxxxx.dat only)
+### 1. Decompress PAYLOAD (Required)
 
-Target File: `BLES01309-PROFILE\~extracted\*.dat`
+Target File: `BLES01309-PROFILE\PAYLOAD`
+
+```
+Decompress(0x00000018, 15)
+```
+
+### 2. Max Gold
+
+Target File: `~extracted\00000018.dat`
 
 ```
 80010004 00002301
 28000004 000F423F
 ```
 
-### 2. 189999 Gold(Apply on xxxxxxxx.dat only)
+### 3. 189999 Gold
 
-Target File: `BLES01309-PROFILE\~extracted\*.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010004 00002301
 28000004 0002E62F
 ```
 
-### 3. Update SHA1(Required)
+### 4. Compress PAYLOAD (Required)
+
+Target File: `BLES01309-PROFILE\PAYLOAD`
+
+```
+Compress(0x00000018)
+```
+
+### 5. Update SHA1(Required)
 
 Target File: `BLES01309-PROFILE\PAYLOAD`
 
