--- a/docs/PS3/BLES01705.md
+++ b/docs/PS3/BLES01705.md
@@ -12,7 +12,7 @@ Decompress(*, 15)
 
 ### 2. Money $9999
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xC12581B2
@@ -21,7 +21,7 @@ write next (4):0000270F
 
 ### 3. Lockpicks 30
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xC12581B2
@@ -31,7 +31,7 @@ write next (34):001E
 ### 4. red:info:CHEATS BELOW MAY STOP STORY TROPHIES
 ### 5. Money 90000
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xC12581B2
@@ -40,7 +40,7 @@ write next (4):00015F90
 
 ### 6. Lockpicks $900
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xC12581B2
@@ -49,7 +49,7 @@ write next (34):0384
 
 ### 7. Silver Eagle 99999 *Uses for Extracted Files List 1
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search C12581B2
@@ -58,7 +58,7 @@ write next 4: 0001869F
 
 ### 8. Lockpick 999 *Uses for Extracted Files List 1
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search C12581B2
@@ -67,7 +67,7 @@ write next 34: 000003E7
 
 ### 9. Infinity Health (Normal Mode) *Uses for Extracted Files List 1
 
-Target File: `BLES01705*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search C12581B2
