--- a/docs/PS3/BLJM60480.md
+++ b/docs/PS3/BLJM60480.md
@@ -2,59 +2,75 @@
 
 `BLJM60480.savepatch`
 
-### 1. codes by Shaka
-### 2. Max Money(Aura)
+### 1. Decompress Save (Required)
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `BLJM60480_SAVE_*\SAVE`
+
+```
+Decompress(0x00000000, 15)
+```
+
+### 2. codes by Shaka
+### 3. Max Money(Aura)
+
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x35:0xFFE0F505
 ```
 
-### 3. Attribute Points& Skills
+### 4. Attribute Points& Skills
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x23:0xFF7FFF7F
 ```
 
-### 4. Level(Choose One)
-### 5. LEVEL 19 for trophy
+### 5. Level(Choose One)
+### 6. LEVEL 19 for trophy
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x13:0x31
 ```
 
-### 6. LEVEL 39 for trophy
+### 7. LEVEL 39 for trophy
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x13:0x72
 ```
 
-### 7. LEVEL 32767
+### 8. LEVEL 32767
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x13:0xFF7F
 ```
 
-### 8. Max Aura
+### 9. Max Aura
 
-Target File: `BLJM60480_SAVE_00*\~extracted\00000000.dat`
+Target File: `~extracted\00000000.dat`
 
 ```
 search "CHero_Store_2"
 write next 0x35:0xFFE0F505
+```
+
+### 10. Compress Save (Required)
+
+Target File: `SAVE`
+
+```
+Compress(0x00000000)
 ```
 
