--- a/docs/PS3/BLUS30323.md
+++ b/docs/PS3/BLUS30323.md
@@ -12,7 +12,7 @@ Decompress(0x00000020, 15)
 
 ### 2. 999999 Points
 
-Target File: `BLUS30323_PROFILE\~extracted\00000020.dat`
+Target File: `~extracted\00000020.dat`
 
 ```
 write at 0x0000004C:0x000F423F
