--- a/docs/PS3/BLUS30406.md
+++ b/docs/PS3/BLUS30406.md
@@ -2,17 +2,42 @@
 
 `BLUS30406.savepatch`
 
-### 1. Max Gold
+### 1. Decompress PAYLOAD (Required)
 
 Target File: `BLUS30406-PROFILE\PAYLOAD`
+
+```
+Decompress(0x00000018, 15)
+```
+
+### 2. Max Gold
+
+Target File: `~extracted\00000018.dat`
 
 ```
 20000173 000F423F
 ```
 
-### 2. Update SHA1 (Required)
+### 3. 189999 Gold
 
-Target File: `BLUS30406-PROFILE\PAYLOAD`
+Target File: `~extracted\00000018.dat`
+
+```
+80010004 00002301
+28000004 0002E62F
+```
+
+### 4. Compress PAYLOAD (Required)
+
+Target File: `BLES01309-PROFILE\PAYLOAD`
+
+```
+Compress(0x00000018)
+```
+
+### 5. Update SHA1 (Required)
+
+Target File: `BLES01309-PROFILE\PAYLOAD`
 
 ```
 set pointer:eof+1
