--- a/docs/PS3/BLUS31146.md
+++ b/docs/PS3/BLUS31146.md
@@ -12,7 +12,7 @@ Decompress(0x00000018, 15)
 
 ### 2. 999999 DP Points
 
-Target File: `BLUS31146-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 search 0x00004505
