--- a/docs/PS3/NPEB00476.md
+++ b/docs/PS3/NPEB00476.md
@@ -12,7 +12,7 @@ Decompress(*, 15)
 
 ### 2. Retry x 9999
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x42A000000000:1
@@ -61,7 +61,7 @@ write next (6):0x270F
 
 ### 3. Pistol ammo x 9999
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x3BAC034C0026E029E20000000002:1
@@ -110,7 +110,7 @@ write next (14):0x270F
 
 ### 4. Shotgun ammo x 9999
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x71C516A1006172323F0000000001:1
@@ -159,7 +159,7 @@ write next (14):0x270F
 
 ### 5. 99 X Medkit
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x15DDB2200000000023000000:1
@@ -208,7 +208,7 @@ write next (12):0x63
 
 ### 6. 99 X Fruit cocktail
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xF8BEA520000000002C000000:1
@@ -257,7 +257,7 @@ write next (12):0x63
 
 ### 7. 99 X Water bottle
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x0F2FAF7F0000000027000000:1
@@ -306,7 +306,7 @@ write next (12):0x63
 
 ### 8. 99 X Painkillers
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x5516363B000000001C000000:1
@@ -355,7 +355,7 @@ write next (12):0x63
 
 ### 9. 99 X Food can
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xD88A64AF000000001B000000:1
@@ -404,7 +404,7 @@ write next (12):0x63
 
 ### 10. 99 X Soda can
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x72C5CEC0000000002E000000:1
@@ -453,7 +453,7 @@ write next (12):0x63
 
 ### 11. 99 X Oral rehydration salts
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x481CF0FD000000002D000000:1
@@ -502,7 +502,7 @@ write next (12):0x63
 
 ### 12. 99 X Adrenaline syringe
 
-Target File: `NPEB00476-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xE69CE35B0000000025000000:1
