--- a/docs/PS3/NPEB01841.md
+++ b/docs/PS3/NPEB01841.md
@@ -2,23 +2,38 @@
 
 `NPEB01841.savepatch`
 
-### 1. :Gold must have 1 (Apply on 000000aa.pss  only)(Working)
-### 2. Gold
+### 1. Decompress Save (Required)
 
-Target File: ``
+Target File: `SAVEDATA`
+
+```
+Decompress(0x000000aa, -15)
+```
+
+### 2.  Gold must have 1 (Working)
+### 3. Gold
+
+Target File: `~extracted\000000aa.dat`
 
 ```
 search "gold###"
 write next (108):0xF423F0
 ```
 
-### 3. :][(Apply on 000000aa.pss  only)
 ### 4. Godmode
 
-Target File: ``
+Target File: `~extracted\000000aa.dat`
 
 ```
 search "GOD_MODE"
 write next (62):0x07554E4B4E4F574E
+```
+
+### 5. Compress Save (Required)
+
+Target File: `SAVEDATA`
+
+```
+Compress(0x000000aa)
 ```
 
