--- a/docs/PS3/NPEB01910.md
+++ b/docs/PS3/NPEB01910.md
@@ -12,7 +12,7 @@ Decompress(0x00000018, 15)
 
 ### 2. Global Max Money
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x0000034B:0x3B9AC9FF
@@ -20,7 +20,7 @@ write at 0x0000034B:0x3B9AC9FF
 
 ### 3. Katrien Max Level 70
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000A7E:0x022BEC
@@ -28,7 +28,7 @@ write at 0x00000A7E:0x022BEC
 
 ### 4. Katrien Max Skill Points
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000747:0x63
@@ -36,7 +36,7 @@ write at 0x00000747:0x63
 
 ### 5. Ghost Monk Max Level 70 (Apply only after character unlock)
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000AEC:0x022BEC
@@ -44,7 +44,7 @@ write at 0x00000AEC:0x022BEC
 
 ### 6. Ghost Monk Max Skill Points (Apply only after character unlock)
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000794:0x63
@@ -52,7 +52,7 @@ write at 0x00000794:0x63
 
 ### 7. Pincoya Max Level 70 (Apply only after character unlock)
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000B5A:0x022BEC
@@ -60,7 +60,7 @@ write at 0x00000B5A:0x022BEC
 
 ### 8. Pincoya Skill Max Points (Apply only after character unlock)
 
-Target File: `NPUB31397-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x000007E1:0x63
