--- a/docs/PS3/NPUB30383.md
+++ b/docs/PS3/NPUB30383.md
@@ -13,7 +13,7 @@ Decompress(*, 15)
 ### 2. Must have 1 or more for cheats to work
 ### 3. Retry x 9999
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x42A000000000:1
@@ -62,7 +62,7 @@ write next (6):0x270F
 
 ### 4. Pistol ammo x 9999
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x3BAC034C0026E029E20000000002:1
@@ -111,7 +111,7 @@ write next (14):0x270F
 
 ### 5. Shotgun ammo x 9999
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x71C516A1006172323F0000000001:1
@@ -160,7 +160,7 @@ write next (14):0x270F
 
 ### 6. 99 X Medkit
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x15DDB2200000000023000000:1
@@ -209,7 +209,7 @@ write next (12):0x63
 
 ### 7. 99 X Fruit cocktail
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xF8BEA520000000002C000000:1
@@ -258,7 +258,7 @@ write next (12):0x63
 
 ### 8. 99 X Water bottle
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x0F2FAF7F0000000027000000:1
@@ -307,7 +307,7 @@ write next (12):0x63
 
 ### 9. 99 X Painkillers
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x5516363B000000001C000000:1
@@ -356,7 +356,7 @@ write next (12):0x63
 
 ### 10. 99 X Food can
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xD88A64AF000000001B000000:1
@@ -405,7 +405,7 @@ write next (12):0x63
 
 ### 11. 99 X Soda can
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x72C5CEC0000000002E000000:1
@@ -454,7 +454,7 @@ write next (12):0x63
 
 ### 12. 99 X Oral rehydration salts
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0x481CF0FD000000002D000000:1
@@ -503,7 +503,7 @@ write next (12):0x63
 
 ### 13. 99 X Adrenaline syringe
 
-Target File: `NPUB30383-AUTOSAVE\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search 0xE69CE35B0000000025000000:1
