--- a/docs/PS3/BLJM61096.md
+++ b/docs/PS3/BLJM61096.md
@@ -12,7 +12,7 @@ Decompress(*, 15)
 
 ### 2. 9000000 XP
 
-Target File: `BLUS31207-SAVE*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search "VoiceOfThePeople"
@@ -21,7 +21,7 @@ write next (73):0x00895440
 
 ### 3. 99 Upgrade points
 
-Target File: `BLUS31207-SAVE*\~extracted\*.dat`
+Target File: `~extracted\*.dat`
 
 ```
 search "VoiceOfThePeople"
