--- a/docs/PS3/BLUS30862.md
+++ b/docs/PS3/BLUS30862.md
@@ -12,7 +12,7 @@ Decompress(0x00000018, 15)
 
 ### 2. Xenomorph 99 Upgrade Points
 
-Target File: `BLUS30862-PROFILE\~extracted\00000018.dat`
+Target File: `~extracted\00000018.dat`
 
 ```
 write at 0x00000179:0x63
@@ -28,7 +28,7 @@ delete at 0x20:0x4ff
 
 ### 4. Xenomorph Max XP
 
-Target File: `BLUS30862-PROFILE\~extracted\00000018.dat`
+Target File: `BLUS30862-PROFILE\PAYLOAD`
 
 ```
 search 0x03000C
@@ -45,7 +45,7 @@ delete at 0x20:0x4ff
 
 ### 6. Marine 99 Upgrade Points
 
-Target File: `BLUS30862-PROFILE\~extracted\00000018.dat`
+Target File: `BLUS30862-PROFILE\PAYLOAD`
 
 ```
 write at 0x0000016D:0x63
@@ -61,7 +61,7 @@ delete at 0x20:0x4ff
 
 ### 8. Marine Max XP
 
-Target File: `BLUS30862-PROFILE\~extracted\00000018.dat`
+Target File: `BLUS30862-PROFILE\PAYLOAD`
 
 ```
 search 0x03000C
