--- a/docs/PS3/BLES02008.md
+++ b/docs/PS3/BLES02008.md
@@ -7,8 +7,8 @@
 Target File: `SAVEDATA\APP.BIN`
 
 ```
-set pointer:eof-1
-set range:0x0000,pointer
+set [end]:eof-1
+set range:0x0000,[end]
 DECRYPT dw8xl
 ```
 
@@ -217,8 +217,8 @@ write next (1):[csum]
 Target File: `SAVEDATA\APP.BIN`
 
 ```
-set pointer:eof-1
-set range:0x0000,pointer
+set [end]:eof-1
+set range:0x0000,[end]
 ENCRYPT dw8xl
 ```
 
